k8s/routing/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: value-fabric-gateway
  namespace: value-fabric
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - __HOST__
        - __API_HOST__
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https-frontend
        protocol: HTTPS
      hosts:
        - __HOST__
      tls:
        mode: SIMPLE
        credentialName: frontend-tls
    - port:
        number: 443
        name: https-api
        protocol: HTTPS
      hosts:
        - __API_HOST__
      tls:
        mode: SIMPLE
        credentialName: layer-apis-tls
